--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,11 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body input[type="search"] {
-    @apply rounded-xl border-[1px] dark:border-gray-700 border-grayscale-200 focus:!border-yellow focus:outline-none focus:ring-0 ring-yellow w-full min-h-[48px] placeholder:text-grayscale-400 pr-7 text-grayscale-900 text-sm transition-all dark:bg-grayscale-900 dark:text-grayscale-50
+  @apply rounded-xl border-[1px] dark:border-gray-700 border-grayscale-200 focus:!border-yellow focus:outline-none focus:ring-0 ring-yellow w-full min-h-[48px] placeholder:text-grayscale-400 pr-7 text-grayscale-900 text-sm transition-all dark:bg-grayscale-900 dark:text-grayscale-50;
 }
 
 .search-area:focus-within svg {
-    @apply text-yellow
+  @apply text-yellow;
 }
